--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/tailwindcss": "^6.12.2",
+    "@prisma/client": "^6.2.1",
+    "@prisma/nuxt": "0.2.0",
     "@vueuse/core": "^12.2.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.469.0",
     "nuxt": "^3.15.0",
+    "nuxt-auth-utils": "0.5.7",
     "radix-vue": "^1.9.12",
     "shadcn-nuxt": "0.11.3",
     "tailwind-merge": "^2.6.0",
