--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
   "dependencies": {
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/tailwindcss": "^6.12.2",
-    "@prisma/client": "^6.3.0",
+    "@prisma/client": "^6.4.1",
     "@prisma/nuxt": "0.2.0",
     "@splinetool/runtime": "^1.9.59",
+    "@tanstack/vue-table": "^8.21.2",
     "@types/bcryptjs": "^2.4.6",
     "@vueuse/core": "^12.2.0",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.469.0",
+    "node-html-parser": "^7.0.1",
     "nuxt": "^3.15.0",
     "nuxt-auth-utils": "0.5.7",
     "nuxt-vue3-google-signin": "^0.0.11",
