--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/tailwindcss": "^6.12.2",
-    "@prisma/client": "^6.4.1",
+    "@prisma/client": "^6.5.0",
     "@prisma/nuxt": "0.2.0",
     "@splinetool/runtime": "^1.9.59",
     "@tanstack/vue-table": "^8.21.2",
     "@types/bcryptjs": "^2.4.6",
-    "@vueuse/core": "^12.2.0",
+    "@unovis/ts": "^1.5.1",
+    "@unovis/vue": "^1.5.1",
+    "@vueuse/core": "^13.0.0",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0",
@@ -33,6 +35,7 @@
     "spline-vue": "^0.1.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "vaul-vue": "^0.4.0",
     "vue": "latest",
     "vue-router": "latest"
   },
