--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.2.0",
+    "@internationalized/date": "^3.7.0",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@prisma/client": "^6.5.0",
@@ -22,9 +24,11 @@
     "@vueuse/core": "^13.0.0",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.8",
     "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "html2pdf.js": "^0.10.3",
     "lucide-vue-next": "^0.469.0",
     "node-html-parser": "^7.0.1",
     "nuxt": "^3.15.0",
