--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "deploy": "git push && git push second"
+    "deploy": "git push && git push second",
+    "seed": "node prisma/seed.js"
   },
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
@@ -30,6 +31,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "html-to-docx": "^1.8.0",
     "html2pdf.js": "^0.10.3",
     "lucide-vue-next": "^0.469.0",
     "moment": "^2.30.1",
@@ -37,6 +39,7 @@
     "nuxt": "^3.15.0",
     "nuxt-auth-utils": "0.5.7",
     "nuxt-vue3-google-signin": "^0.0.11",
+    "puppeteer": "^24.4.0",
     "radix-vue": "^1.9.12",
     "shadcn-nuxt": "0.11.3",
     "spline-vue": "^0.1.3",
@@ -49,6 +52,7 @@
   "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610",
   "devDependencies": {
     "prisma": "^6.5.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
   }
 }
