--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@internationalized/date": "^3.7.0",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/tailwindcss": "^6.12.2",
-    "@prisma/client": "^6.5.0",
+    "@prisma/client": "^6.6.0",
     "@prisma/nuxt": "0.2.0",
     "@splinetool/runtime": "^1.9.59",
+    "@stripe/stripe-js": "^7.0.0",
     "@tanstack/vue-table": "^8.21.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/lodash": "^4.17.16",
     "@unovis/ts": "^1.5.1",
     "@unovis/vue": "^1.5.1",
     "@vueuse/core": "^13.0.0",
@@ -33,6 +35,7 @@
     "date-fns": "^4.1.0",
     "html-to-docx": "^1.8.0",
     "html2pdf.js": "^0.10.3",
+    "lodash": "^4.17.21",
     "lucide-vue-next": "^0.469.0",
     "moment": "^2.30.1",
     "node-html-parser": "^7.0.1",
@@ -43,6 +46,7 @@
     "radix-vue": "^1.9.12",
     "shadcn-nuxt": "0.11.3",
     "spline-vue": "^0.1.3",
+    "stripe": "^18.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul-vue": "^0.4.0",
