--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@types/lodash": "^4.17.16",
     "@unovis/ts": "^1.5.1",
     "@unovis/vue": "^1.5.1",
-    "@vueuse/core": "^13.0.0",
+    "@vueuse/core": "^13.1.0",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.8",
@@ -44,6 +44,7 @@
     "nuxt-vue3-google-signin": "^0.0.11",
     "puppeteer": "^24.4.0",
     "radix-vue": "^1.9.12",
+    "reka-ui": "^2.2.0",
     "shadcn-nuxt": "0.11.3",
     "spline-vue": "^0.1.3",
     "stripe": "^18.0.0",
