--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/lodash": "^4.17.16",
     "@unovis/ts": "^1.5.1",
     "@unovis/vue": "^1.5.1",
+    "@vueup/vue-quill": "^1.2.0",
     "@vueuse/core": "^13.2.0",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
