--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@internationalized/date": "^3.7.0",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/tailwindcss": "^6.12.2",
-    "@prisma/client": "^6.8.2",
+    "@prisma/client": "^6.10.1",
     "@prisma/nuxt": "0.2.0",
     "@splinetool/runtime": "^1.9.59",
     "@stripe/stripe-js": "^7.0.0",
@@ -26,7 +26,7 @@
     "@unovis/ts": "^1.5.1",
     "@unovis/vue": "^1.5.1",
     "@vueup/vue-quill": "^1.2.0",
-    "@vueuse/core": "^13.2.0",
+    "@vueuse/core": "^13.3.0",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.8",
@@ -34,6 +34,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "extenso": "^2.1.0",
     "html-to-docx": "^1.8.0",
     "html2pdf.js": "^0.10.3",
     "lodash": "^4.17.21",
@@ -45,7 +46,7 @@
     "nuxt-vue3-google-signin": "^0.0.11",
     "puppeteer": "^24.4.0",
     "radix-vue": "^1.9.17",
-    "reka-ui": "^2.2.1",
+    "reka-ui": "^2.3.1",
     "shadcn-nuxt": "^2.1.0",
     "spline-vue": "^0.1.3",
     "stripe": "^18.0.0",
